# Fugue

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: feasibility_plan.md  implementation_notes.md  remote_sync.md  research_report.md  resources_manifest.md
examples/subjects/: c_minor_subject.theme
scripts/: fetch_resources.py  verify_generator.py
src/fugue_generator/: __init__.py  cli.py  evaluate.py  export.py  generator.py  models.py  style.py  subject.py  theory.py
tests/: test_generator.py  test_style.py  test_theory.py
