[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fugue-generator"
version = "0.1.0"
description = "Research scaffold for hybrid rule-based and AI fugue generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "music21>=9.7",
  "mido>=1.3.2",
  "pretty_midi>=0.2.10",
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "pydantic>=2.7",
  "typer>=0.12",
  "tqdm>=4.66",
  "z3-solver>=4.13.0.0",
  "python-constraint>=1.4.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3",
  "miditok>=3.0",
  "transformers>=4.40",
  "datasets>=2.19",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
fugue = "fugue_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

